--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript","plugin:tailwindcss/recommended"]
+  "extends": ["next/core-web-vitals", "next/typescript","plugin:tailwindcss/recommended"],
+  "rules": {
+    "@next/next/no-img-element":"off",
+    "tailwindcss/no-custom-classname": "off"
+  }
 }
