--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "keen-slider": "^6.8.6",
     "next": "15.0.2",
     "playable": "^2.15.3",
     "react": "19.0.0-rc-02c0e824-20241028",
