--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@number-flow/react": "^0.3.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "keen-slider": "^6.8.6",
     "next": "15.0.2",
-    "numeral": "^2.0.6",
     "playable": "^2.15.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
