--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_COIN_URL=""
 NEXT_PUBLIC_COIN_ADDRESS=0x28561B8A2360F463011c16b6Cc0B0cbEF8dbBcad 
 NEXT_PUBLIC_X_URL=https://x.com/moodengctoeth
 NEXT_PUBLIC_TELE_URL=https://t.me/moodengethcto
-NEXT_PUBLIC_EMAIL=""
+NEXT_PUBLIC_EMAIL="Info@moodeng.vip"
 NEXT_PUBLIC_CHART_URL=https://dexscreener.com/ethereum/0x470dc172d6502ac930b59322ece5345dd456a03d
 NEXT_PUBLIC_DEX_URL=https://www.dextools.io/app/en/token/moodeng
 NEXT_PUBLIC_DEXS_URL=https://dexscreener.com/ethereum/0x470dc172d6502ac930b59322ece5345dd456a03d
