--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_METADATA_URL=
 NEXT_PUBLIC_COIN_URL=""
 NEXT_PUBLIC_COIN_ADDRESS=0x28561B8A2360F463011c16b6Cc0B0cbEF8dbBcad 
-NEXT_PUBLIC_X_URL=https://x.com/moodengctoeth
+NEXT_PUBLIC_X_URL=https://x.com/moodeng_eth_cto
 NEXT_PUBLIC_TELE_URL=https://t.me/moodengethcto
 NEXT_PUBLIC_EMAIL="Info@moodeng.vip"
 NEXT_PUBLIC_CHART_URL=https://dexscreener.com/ethereum/0x470dc172d6502ac930b59322ece5345dd456a03d
